Trying to fix image issue on mobile.

--- a/styles.css
+++ b/styles.css
@@ -31,7 +31,7 @@ body {
   scroll-snap-align: start;
   scroll-snap-stop: always;
   /* background-image: none; */
-  background-position: center center;
+  background-position: center;
   background-repeat: no-repeat;
   -webkit-background-size: cover;
   -moz-background-size: cover;
